--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -134,7 +134,6 @@
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
-					<Add option="-Og" />
 					<Add option="-g" />
 					<Add option="-fopenmp" />
 					<Add option="-D__GNUWIN64__" />
@@ -2543,6 +2542,8 @@
 		</Unit>
 		<Unit filename="kernel/core/ParserLib/muApply.cpp" />
 		<Unit filename="kernel/core/ParserLib/muApply.hpp" />
+		<Unit filename="kernel/core/ParserLib/muCompositeStructures.cpp" />
+		<Unit filename="kernel/core/ParserLib/muCompositeStructures.hpp" />
 		<Unit filename="kernel/core/ParserLib/muHelpers.cpp" />
 		<Unit filename="kernel/core/ParserLib/muHelpers.hpp" />
 		<Unit filename="kernel/core/ParserLib/muInternalStructures.hpp" />
