--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -134,6 +134,7 @@
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
+					<Add option="-Og" />
 					<Add option="-g" />
 					<Add option="-fopenmp" />
 					<Add option="-D__GNUWIN64__" />
