Added possibility to read an XML file to a DictStruct

--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -933,18 +933,7 @@
 			<Option target="Debug_x64" />
 			<Option target="Nightly_x64" />
 		</Unit>
-		<Unit filename="externals/tinyxml2/tinyxml2.cpp">
-			<Option target="Debug" />
-			<Option target="Release" />
-			<Option target="Profiling" />
-			<Option target="Deep Debug" />
-			<Option target="Profiling_x64" />
-			<Option target="Release_x64" />
-			<Option target="Deep Debug_x64" />
-			<Option target="Dr Memory_x64" />
-			<Option target="Debug_x64" />
-			<Option target="Nightly_x64" />
-		</Unit>
+		<Unit filename="externals/tinyxml2/tinyxml2.cpp" />
 		<Unit filename="externals/tinyxml2/tinyxml2.h">
 			<Option target="Debug" />
 			<Option target="Release" />
