--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -398,6 +398,18 @@
 			<Option target="Debug_x64" />
 			<Option target="Nightly_x64" />
 		</Unit>
+		<Unit filename="common/markup.hpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Profiling" />
+			<Option target="Deep Debug" />
+			<Option target="Profiling_x64" />
+			<Option target="Release_x64" />
+			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
+			<Option target="Debug_x64" />
+			<Option target="Nightly_x64" />
+		</Unit>
 		<Unit filename="common/options.cpp">
 			<Option target="Debug" />
 			<Option target="Release" />
