--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -1395,6 +1395,30 @@
 			<Option target="Debug_x64" />
 			<Option target="Nightly_x64" />
 		</Unit>
+		<Unit filename="gui/compositions/tablebrowser.cpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Profiling" />
+			<Option target="Deep Debug" />
+			<Option target="Profiling_x64" />
+			<Option target="Release_x64" />
+			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
+			<Option target="Debug_x64" />
+			<Option target="Nightly_x64" />
+		</Unit>
+		<Unit filename="gui/compositions/tablebrowser.hpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Profiling" />
+			<Option target="Deep Debug" />
+			<Option target="Profiling_x64" />
+			<Option target="Release_x64" />
+			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
+			<Option target="Debug_x64" />
+			<Option target="Nightly_x64" />
+		</Unit>
 		<Unit filename="gui/compositions/tableeditpanel.cpp">
 			<Option target="Debug" />
 			<Option target="Release" />
