--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -2343,6 +2343,18 @@
 			<Option target="Debug_x64" />
 			<Option target="Nightly_x64" />
 		</Unit>
+		<Unit filename="gui/stringconv.hpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Profiling" />
+			<Option target="Deep Debug" />
+			<Option target="Profiling_x64" />
+			<Option target="Release_x64" />
+			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
+			<Option target="Debug_x64" />
+			<Option target="Nightly_x64" />
+		</Unit>
 		<Unit filename="gui/terminal/TextManager.cpp">
 			<Option target="Debug" />
 			<Option target="Release" />
